--- a/blog/templates/layout.haml
+++ b/blog/templates/layout.haml
@@ -25,6 +25,7 @@
 
     %meta{:name => "viewport", :content => "width=device-width, initial-scale=1"}
 
+    %link{:rel => "alternate", :type => "application/atom+xml", :title => "Ryan Closner - Blog", :href => "/blog/index.xml"}
 
     %link{:rel => "stylesheet", :href => "/css/normalize.css"}
     %link{:rel => "stylesheet", :href => "/css/grid.css"}
