--- a/blog/templates/layout.haml
+++ b/blog/templates/layout.haml
@@ -1,100 +1,1 @@
-!!! 5
-
--# paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/
-
-<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-
-%html.no-js
-  %head
-    -# ==========================================================================
-    -# Head
-    -# ==========================================================================
-
-    %meta{ :charset => "utf-8" }
-    %meta{ "http-equiv" => "XA-Compatible", :content => "IE=edge,chrome=1"}
-
-    %title= @title 
-    
-    %meta{:name => "description", :content => @description }
-    %meta{:name => "keywords", :content => "ryan closner america patriot freedom bravery love united states"}
-    %meta{:name => "author", :content => "Ryan Closner"}
-
-
-    %meta{:name => "viewport", :content => "width=device-width, initial-scale=1"}
-
-    %link{:rel => "alternate", :type => "application/atom+xml", :title => "Ryan Closner - Blog", :href => "/blog/index.xml"}
-
-    %link{:rel => "stylesheet", :href => "/css/normalize.css"}
-    %link{:rel => "stylesheet", :href => "/css/grid.css"}
-    %link{:rel => "stylesheet", :href => "/css/main.css"}
-    %link{:rel => "stylesheet", :href => "/css/style.css"}
-    %script{:src => "/js/vendor/modernizr-2.6.2.min.js"}
-
-  %body{ :class => @body_classes }
-    <!--[if IE 7]> 
-    %p.chromeframe 
-      You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.
-    <![endif]-->
-
-    #container.container.container_12
-      %header#header.grid_12
-        .grid_2.prefix_1
-          .flag
-            %img{:src => "/img/header/flag.gif"}
-        .grid_6
-          #logo
-            %img{:src => "/img/header/logo.png"}
-        .grid_2
-          .flag
-            %img{:src => "/img/header/flag.gif"}
-
-        .clear
-
-        .grid_6.prefix_3
-          %nav#nav
-            %ul
-              %li
-                %a{:href => "/"} Home
-              %li
-                %a{:href => "http://blog.ryanclosner.com"} Blog
-              %li
-                %a{:href => "http://github.com/rclosner"} Code
-              %li
-                %a{:href => "http://twitter.com/rclosner"} Twitter 
-              %li
-                %a{:href => "mailto:ryan@ryanclosner.com"} Email
-
-
-      #main.grid_12{:role => "main"}= yield
-      
-      %footer#footer.grid_12
-        %h1 Today is #{Date.today.strftime("%A, %m/%d/%y")}
-        %h2 Made by &copy; Ryan Closner
-
-    -# JS
-    -# ==========================================================================
-
-    -# jQuery
-
-    %script{:src => "//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"}
-    :javascript
-      window.jQuery || document.write('<script src="/js/vendor/jquery-1.8.2.min.js"><\/script>')
-
-    -# Custom JS
-
-    %script{:src => "/js/main.js"}
-
-    -#
-    -# Asynchronous Google Analytics
-    -# Change UA-XXXXX-X to be your site's ID
-    -# mathiasbynens.be/notes/async-analytics-snippet
-    -#
-
-    -# :javascript
-      var _gaq=[['_setAccount','UA-35301526-1'],['_trackPageview']];
-      (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-      g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-      s.parentNode.insertBefore(g,s)}(document,'script'));
+../../views/layout.haml
