Change blog path

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -58,7 +58,7 @@
               %li
                 %a{:href => "/"} Home
               %li
-                %a{:href => "http://blog.ryanclosner.com"} Blog
+                %a{:href => "http://ryanclosner.com/blog"} Blog
               %li
                 %a{:href => "http://github.com/rclosner"} Code
               %li
