--- a/views/layout.haml
+++ b/views/layout.haml
@@ -38,6 +38,9 @@
       You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.
     <![endif]-->
 
+    %a{:href => "https://github.com/rclosner/nationalism" }
+      %img{:style => "position: absolute; top: 0; right: 0; border: 0;", :src => "https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png", :alt => "Fork me on GitHub" }
+
     #container.container.container_12
       %header#header.grid_12
         .grid_2.prefix_1
