Uncomment google analytics

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -89,13 +89,7 @@
 
     %script{:src => "/js/main.js"}
 
-    -#
-    -# Asynchronous Google Analytics
-    -# Change UA-XXXXX-X to be your site's ID
-    -# mathiasbynens.be/notes/async-analytics-snippet
-    -#
-
-    -# :javascript
+    :javascript
       var _gaq=[['_setAccount','UA-35301526-1'],['_trackPageview']];
       (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
       g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
